// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withAccordionItemState(BpkAccordionItem) should render correctly 1`] = `
<DocumentFragment>
  <div
    id="my-accordion"
  >
    <dt
      aria-labelledby="my-accordion"
      class="bpk-accordion__title"
    >
      <button
        aria-controls="my-accordion_content"
        aria-expanded="false"
        class="bpk-accordion__toggle-button"
        type="button"
      >
        <span
          class="bpk-accordion__flex-container"
        >
          <span
            class="bpk-text bpk-text--base bpk-accordion__title-text"
          >
            My accordion item
          </span>
          <span
            class="bpk-accordion__icon-wrapper"
          >
            <span
              style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
            >
              <svg
                class="bpk-accordion__item-expand-icon"
                height="8"
                style="width: .5rem; height: .5rem;"
                viewBox="0 0 16 16"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </dt>
    <dd
      aria-labelledby="my-accordion_content"
      class="bpk-accordion__content-container"
      id="my-accordion_content"
    >
      <div
        style="height: 0px; overflow: hidden; transition: height 200ms ease;"
      >
        <div
          style="display: none;"
        >
          My accordion content
        </div>
      </div>
    </dd>
  </div>
</DocumentFragment>
`;

exports[`withAccordionItemState(BpkAccordionItem) should render correctly with "expanded" prop 1`] = `
<DocumentFragment>
  <div
    id="my-accordion"
  >
    <dt
      aria-labelledby="my-accordion"
      class="bpk-accordion__title"
    >
      <button
        aria-controls="my-accordion_content"
        aria-expanded="false"
        class="bpk-accordion__toggle-button"
        type="button"
      >
        <span
          class="bpk-accordion__flex-container"
        >
          <span
            class="bpk-text bpk-text--base bpk-accordion__title-text"
          >
            My accordion item
          </span>
          <span
            class="bpk-accordion__icon-wrapper"
          >
            <span
              style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
            >
              <svg
                class="bpk-accordion__item-expand-icon"
                height="8"
                style="width: .5rem; height: .5rem;"
                viewBox="0 0 16 16"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </dt>
    <dd
      aria-labelledby="my-accordion_content"
      class="bpk-accordion__content-container"
      id="my-accordion_content"
    >
      <div
        style="height: 0px; overflow: hidden; transition: height 200ms ease;"
      >
        <div
          style="display: none;"
        >
          My accordion content
        </div>
      </div>
    </dd>
  </div>
</DocumentFragment>
`;

exports[`withAccordionItemState(BpkAccordionItem) should render correctly with "initiallyExpanded" prop 1`] = `
<DocumentFragment>
  <div
    id="my-accordion"
  >
    <dt
      aria-labelledby="my-accordion"
      class="bpk-accordion__title"
    >
      <button
        aria-controls="my-accordion_content"
        aria-expanded="true"
        class="bpk-accordion__toggle-button"
        type="button"
      >
        <span
          class="bpk-accordion__flex-container"
        >
          <span
            class="bpk-text bpk-text--base bpk-accordion__title-text"
          >
            My accordion item
          </span>
          <span
            class="bpk-accordion__icon-wrapper"
          >
            <span
              style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
            >
              <svg
                class="bpk-accordion__item-expand-icon bpk-accordion__item-expand-icon--flipped"
                height="8"
                style="width: .5rem; height: .5rem;"
                viewBox="0 0 16 16"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.572 1.572 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </dt>
    <dd
      aria-labelledby="my-accordion_content"
      class="bpk-accordion__content-container"
      id="my-accordion_content"
    >
      <div
        style="height: auto; overflow: visible; transition: height 200ms ease;"
      >
        <div>
          My accordion content
        </div>
      </div>
    </dd>
  </div>
</DocumentFragment>
`;
